Use asciidoctor.convertFile instead of loadFile consistently
Co-authored-by: Florentin Dörre <florentin.dorre@neotechnology.com>
Co-authored-by: Adam Schill Collberg <adam.schill.collberg@protonmail.com>